# TeamFlow

./: .gitignore  404.html  README.md  index.html  package-lock.json
assets/: index-B0f-JxEO.css  index-B9ZX5q2P.css  index-BHrXP5Vd.js  index-BUwWkzKP.js  index-Bf3a2Uba.js  index-BmpqH9xO.js  index-BpFK7XbC.css  index-BpUibbiY.css  index-Bxe33fHV.js  index-C7lpQzoy.js  index-C8L9pw45.js  index-C9lAg3y2.css  index-CBpx2H5S.js  index-CIF79vni.css  index-CKQ5QYcj.js  index-CNVwzVlC.js  index-CW4ZPFAe.css  index-CcLXh_tV.js  index-CcuQl2gr.css  index-CiBzpO75.js  index-CipAAgQ-.js  index-CjAgqKwT.css  index-Cm0IzTIt.js  index-Ct4mNo7c.js  index-D-ONPzFr.js  index-D-uL5Ik5.js  index-D1Q3lPFu.css  index-D5Bi8mI6.js  index-DEk2ZhLa.css  index-DG6HHte3.js  index-DI4ZZ4ZH.js  index-DL0AFK2_.js  index-DLDGz7Kf.css  index-DMEzqQaC.js  index-DOaquBfy.js  index-DTcOJHHn.js  index-DVV0GptY.js  index-DYFOFaZ5.js  index-D_E5vB01.css  index-Ddw7zBB7.js  (+12 more)
backend/: CMakeLists.txt  main.cpp
backend/controllers/: Database.cpp  Database.h
backend/models/: Role.cpp  Role.h  User.cpp  User.h
backend/schema/: init.sql
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.css  App.tsx  index.css
web/src/components/: Footer.tsx  Header.tsx  useTranslations.ts
web/src/lib/: buttonVariants.ts
web/src/models/: Event.ts  Task.ts
web/src/pages/: AboutPage.tsx  BlogPage.tsx  CareerPage.tsx  ContactPage.tsx  DayPage.tsx  DocsPage.tsx  DownloadPage.tsx  ErrorPage.tsx  FeaturesPage.tsx  Home.tsx  Login.tsx  MonthPage.tsx  MyTeamPage.tsx  (+11 more)
(+63 files in other folders)
